crates/oxc_react_compiler/tests/snapshots/dce-unused-const.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/dce-unused-const.js
---
function Component(props) {
	return props.value;
}
export const FIXTURE_ENTRYPOINT = {
	fn: Component,
	params: [{ value: 42 }]
};
