crates/oxc_react_compiler/tests/snapshots/dce-unused-prefix-update.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/dce-unused-prefix-update.js
---
function Component(props) {
	let i;
	i = props.i;
	return i;
}
export const FIXTURE_ENTRYPOINT = {
	fn: Component,
	params: [{ i: 42 }]
};
