crates/oxc_react_compiler/tests/snapshots/debugger.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/debugger.js
---
function Component(props) {
	debugger;
	if (props.cond) {
		debugger;
	} else {
		while (props.cond) {
			debugger;
		}
	}
	debugger;
}
export const FIXTURE_ENTRYPOINT = {
	fn: Component,
	params: ["TodoAdd"],
	isComponent: "TodoAdd"
};
