crates/oxc_react_compiler/tests/snapshots/declare-reassign-variable-in-closure.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/declare-reassign-variable-in-closure.js
---
import { c as _c } from "react/compiler-runtime";
function Component(p) {
	const $ = _c(1);
	let x;
	if ($[0] === Symbol.for("react.memo_cache_sentinel")) {
		const foo = () => {
			x = {};
		};
		foo();
		$[0] = x;
	} else {
		x = $[0];
	}
	return x;
}
export const FIXTURE_ENTRYPOINT = {
	fn: Component,
	params: ["TodoAdd"],
	isComponent: "TodoAdd"
};
