crates/oxc_react_compiler/tests/snapshots/default-param-array-with-unary.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/default-param-array-with-unary.js
---
import { c as _c } from "react/compiler-runtime";
function Component(t0) {
	const $ = _c(2);
	let t1;
	if ($[0] !== t0) {
		t1 = t0 === undefined ? [-1, 1] : t0;
		$[0] = t0;
		$[1] = t1;
	} else {
		t1 = $[1];
	}
	const x = t1;
	return x;
}
export const FIXTURE_ENTRYPOINT = {
	fn: Component,
	params: []
};
