crates/oxc_react_compiler/tests/snapshots/default-param-with-empty-callback.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/default-param-with-empty-callback.js
---
function Component(t0) {
	const x = t0 === undefined ? _temp : t0;
	return x;
}
function _temp() {}
export const FIXTURE_ENTRYPOINT = {
	fn: Component,
	params: []
};
